scode/team_team/prob8/error.txt
  File "/var/www/html/scode/team_team/prob8/main.py", line 9
    for i in range
                  ^
SyntaxError: expected ':'
